Tue Dec 28 09:54:55 2021  Rob Lauer  <rlauer6@comcast.net>

	[3.0.2-14]:
	* src/main/perl/lib/Bedrock/Model/Handler.pm.in
	- use Bedrock::Hash, Bedrock::Model::Field here

Mon Dec 27 18:27:28 2021  Rob Lauer  <rlauer6@comcast.net>

	[Bedrock::Model::Importer]:
	* bedrock-build: bump
	* src/main/perl/lib/t/06-model.t: new
	* src/main/perl/lib/Bedrock/Model/Importer.pm.in: new
	* src/main/perl/lib/Bedrock/Model/ReserverdWords.pm.in: new
	* src/main/perl/lib/Bedrock/Model/ReserverdWords/MySQL.pm.in: new
	* src/main/perl/lib/Makefile.am: add above to build
	* bedrock.spec.in: add bedrock-model-importer.pl to build
	* src/main/perl/bin/bedrock-model-importer.pl.in: new
	* src/main/perl/bin/Makefile.am: add above to build
	* src/main/perl/lib/BLM/DBHandler.pm.in: unload args
	* src/main/perl/lib/Bedrock/Model.pm.in
	- add verbose, debug options
	- Carp
	(new)
	- use getters
	- use _init_serializer
	(describe_table): allow 3 arg form (serializer, dbi, table)
	(_init_serializer): new
	(as_string): alias for mode_as_string
	(to_string): likewise
	(create_table):
	- validate that all entries of model are Bedrock::Model::Field objects
	* src/main/perl/lib/BLM/IndexedTableHandler.pm.in
	(_upsert_mode): `` field names to in event any are keywords
	(_update): likewise
	(_get_values): in case any fields are quoted
	(select): unload args
	(fetch_mode): likewise
	(get_fields): remove quotes from field names
	* src/main/perl/lib/Bedrock/Model/Field.pm.in
	- Carp
	(new): new, check required args
	* src/main/perl/lib/Bedrock/Model/Serializer/MySQL.pm.in
	- pod
	- Carp
	(describe_table): check args
	(as_string)
	- unload args
	- verify fields are Bedrock::Model::Field objects

Mon Dec 20 18:19:32 2021  Rob Lauer  <rlauer6@comcast.net>

	* src/main/perl/lib/Bedrock/Model.pm.in
	(create_table)
	- check if table exists
	- test migration if table exists
	(create): likewise
	* src/main/perl/lib/Bedrock/Model/Migration.pm.in
	(migrate)
	- ignore whitespace when determining changes in tables