@@ -73,7 +73,6 @@ for a in index.rock error.roc itworks.rock notworking.html; do
   cp %{buildroot}/%{_datadir}/bedrock/htdocs/$a %{buildroot}/var/www/html
 done
 
-cp %{buildroot}/%{_libdir}/bedrock/config/perl_bedrock.conf %{buildroot}/etc/httpd/conf.d
 cp %{buildroot}/%{_libdir}/bedrock/cgi-bin/bedrock.cgi %{buildroot}/var/www/cgi-bin/bedrock.cgi
 
 %clean
@@ -159,11 +158,12 @@ Group:    Development/Tools
 %files website
 
 %defattr(-,root,root)
-%config(noreplace) /etc/httpd/conf.d/perl_bedrock.conf
+#%config(noreplace) /etc/httpd/conf.d/perl_bedrock.conf
 
 %{_libdir}/bedrock/config/startup.pl
-%{_libdir}/bedrock/config/perl_bedrock.conf
 %{_libdir}/bedrock/config/bedrock-rest-framework.conf
+%{_libdir}/bedrock/config/perl_bedrock.conf22
+%{_libdir}/bedrock/config/perl_bedrock.conf24
 
 %defattr(-,apache,apache)
 /var/www/include
@@ -180,6 +180,8 @@ Group:    Development/Tools
 
 %post website
 
+set -x
+
 mkdir -p /var/www/config
 mkdir -p /var/www/config.d/plugin
 
@@ -187,6 +189,17 @@ chown apache:apache /var/www/config
 chown -R apache:apache /var/www/config.d
 
 cat %{_libdir}/bedrock/config/tagx.xml | perl -np -e 's|BEDROCK_CONFIG_PATH">.*?<|BEDROCK_CONFIG_PATH">/var/www/config<|' > /var/www/config/tagx.xml
+
+apache_version=$(httpd -v | head -1 | sed 's/^.*Apache\///' | \
+  awk '{print $1}' | cut -d'.' -f 1,2 | sed 's/\.//')
+  
+if test -n "$apache_version"; then
+  cp %{_libdir}/bedrock/config/perl_bedrock.conf${apache_version} /etc/httpd/conf.d/perl_bedrock.conf
+else
+  echo "WARNING: could not determine Apache version...using Apache 2.2 configuration"
+  cp %{_libdir}/bedrock/config/perl_bedrock.conf22 /etc/httpd/conf.d/perl_bedrock.conf
+  
+fi
 
 # --> UTILs
 %package utils
