@@ -1,0 +1,96 @@
+#-*- mode: conf; -*-
+
+SetEnv     BEDROCK_CONFIG_PATH @libdir@/bedrock/config
+# SetEnv	   BEDROCK_CACHE_CONFIG On
+SetEnv     BedrockLogLevel debug
+
+DirectoryIndex index.roc index.rock
+
+AddType	text/html .roc .rock
+AddType application/json .jroc .jrock
+
+# CGI handlers
+Action        bedrock-cgi  /cgi-bin/bedrock.cgi virtual
+Action        bedrock-docs /cgi-bin/bedrock-docs.cgi virtual
+Action        bedrock-session-files /cgi-bin/bedrock-session-files.cgi virtual
+
+AddHandler    bedrock-cgi .rock .jrock
+
+# Bedrock - mod-perl for .roc (if mod_perl)
+<IfModule mod_perl.c>
+  PerlRequire @libdir@/bedrock/config/startup.pl
+  AddHandler    perl-script .roc .jroc
+  PerlHandler   Apache::Bedrock
+</IfModule>
+
+<IfModule !mod_perl.c>
+  AddHandler  bedrock-cgi .roc .jroc
+</IfModule>
+
+Alias /bedrock/img @datadir@/bedrock/img
+
+<Directory @datadir@/bedrock/img>
+   Options -Indexes
+   AllowOverride None
+   require all granted
+</Directory>
+
+Alias /bedrock/doc @datadir@/doc/bedrock-@VERSION@
+
+<Directory @datadir@/doc/bedrock-@VERSION@>
+   Options +Indexes
+   AllowOverride None
+   require all granted
+</Directory>
+
+Alias /bedrock/css @datadir@/bedrock/css
+
+<Directory @datadir@/bedrock/css>
+   Options -Indexes
+   AllowOverride None
+   require all granted
+</Directory>
+
+# Bedrock system directory, access to which is controlled
+#  by authentication: default username=admin, password=bedrock
+#  and by setting in tagx.xml ALLOW_BEDROCK_INFO (default=yes)
+Alias /bedrock @apache_default_htdocsdir@/bedrock
+
+<Directory @apache_default_htdocsdir@/bedrock/>
+  AcceptPathInfo On
+  Options -Indexes
+  AllowOverride None
+
+  <IfModule mod_perl.c>
+    SetHandler perl-script 
+    PerlHandler Apache::BedrockDocs 
+  </IfModule>
+
+  <IfModule !mod_perl.c>
+    SetHandler bedrock-docs
+  </IfModule>
+
+  AuthType Basic
+  AuthName Bedrock
+  AuthBasicProvider file
+  AuthUserFile @libdir@/bedrock/config/bedrock.users
+  require valid-user
+
+</Directory>
+
+Alias /session @apache_sessiondir@
+
+<Directory @apache_sessiondir@>
+  AcceptPathInfo On
+  Options -Indexes
+
+  <IfModule mod_perl.c>
+    SetHandler perl-script
+    PerlHandler Apache::BedrockSessionFiles
+  </IfModule>
+
+  <IfModule !mod_perl.c>
+    SetHandler bedrock-session-files
+  </IfModule>
+
+</Directory>
