@@ -1,3 +1,13 @@
+Sat Jan  1 04:58:26 2022  Rob Lauer  <rlauer6@comcast.net>
+
+	[Apache 2.4 configuration]:
+	* bedrock.spec.in
+	- check apache version and use appropriate conf file
+	* src/main/bedrock/config/perl_bedrock.conf22.in
+	- renamed from perl_bedrock.conf
+	* src/main/bedrock/config/perl_bedrock.conf24.in: new
+	* src/main/bedrock/config/Makefile.am: add above to build
+
 Tue Dec 28 09:54:55 2021  Rob Lauer  <rlauer6@comcast.net>
 
 	[3.0.2-14]:
